# KIT-GEOM

./: .gitignore  Makefile.am  README.md  architecture.txt  bootstrap  configure.ac
backup/: PolygonTriangulation.hpp
doc/: architecture.txt
src/: CMakeLists.txt  Makefile.am  main.cpp
src/Algo/: Algo_Dualizing.cpp  Algo_Dualizing.hpp
src/Algo/Cornercutting/: Algo_Edgecutting.cpp  Algo_Edgecutting.hpp  Algo_Edgecutting48.cpp  Algo_Edgecutting48.hpp  Algo_EdgecuttingHC.cpp  Algo_EdgecuttingHC.hpp  Algo_MaxMatching.cpp  Algo_MaxMatching.hpp
src/Algo/Honeycomb/: Algo_Honeycomb.cpp  Algo_Honeycomb.hpp
src/Data/: Data_Polyhedron.cpp  Data_Polyhedron.hpp  Data_Primitive.cpp  Data_Primitive.hpp
src/View/: View_File.cpp  View_File.hpp  View_Geom.cpp  View_Geom.hpp
