##init
AC_INIT([amhello], [1.0], [bug-automake@gnu.org])
AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects foreign])
##compiler and libtool
AC_PROG_CC
#AC_PROG_CXX
#AC_PROG_LIBTOOL
##input
#AC_CONFIG_MACRO_DIR([m4])
#AC_CONFIG_AUX_DIR([build-aux])
#AC_PROG_LIBTOOL
#AC_CONFIG_SRCDIR([main.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT
