## init ac
AC_INIT([2bpig], [1.0], [johnfox512@hotmail.com])

## input
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([build-aux])

## init am
AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects foreign])

## compiler and libtool
AC_PROG_CC
#AC_PROG_CXX
#AM_PROG_LIBTOOL

## setting files
#AC_CONFIG_SRCDIR([main.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT
